fix bad contrast and improve fake glass material

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,7 @@ main {
 img {
   max-width: 100%;
   height: auto;
+  border-radius: 1.1rem;
 }
 
 /* Fonts */
